--- a/Residuum.Services/appsettings.json
+++ b/Residuum.Services/appsettings.json
@@ -6,15 +6,15 @@
   },
   "AllowedHosts": "*",
   "Blizzard": {
-    "ClientId": "[Blizzard API ClientID]",
-    "Secret": "[Blizzard API Secret]"
+    "ClientId": "16b446aa29154ee18ce841a65d209482",
+    "Secret": "aeJnpQ29doUMvWDOrMojqUCNp1ZlTTfV"
   },
   "Guild": {
-    "Realm": "[Realm Name]",
-    "Name": "[Guild Name]",
-    "OverrideRaidProgressionSummary": "[true/false, display normal progress over others if present]" 
+    "Realm": "thunderhorn",
+    "Name": "residuum",
+    "OverrideRaidProgressionSummary": "true"
   },
   "Page": {
-    "Uri": "[https://yoursite.net/]"
+    "Uri": "https://residuumservices.azurewebsites.net/"
   }
 }
