Half done attempt at porting entity

--- a/Residuum.Services/appsettings.json
+++ b/Residuum.Services/appsettings.json
@@ -16,5 +16,8 @@
   },
   "Page": {
     "Uri": "https://residuumservices.azurewebsites.net/"
-  }
+  },
+  "ConnectionStrings": {
+    "MainConnection": "Server=local;Database=ResiduumServicesMainDatabase;Trusted_Connection=True;"
+  } 
 }
