--- a/Residuum.Services/appsettings.Development.json
+++ b/Residuum.Services/appsettings.Development.json
@@ -5,5 +5,21 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "Blizzard": {
+    "ClientId": "16b446aa29154ee18ce841a65d209482",
+    "Secret": "aeJnpQ29doUMvWDOrMojqUCNp1ZlTTfV"
+  },
+  "Guild": {
+    "Realm": "thunderhorn",
+    "Name": "residuum",
+    "OverrideRaidProgressionSummary": "true"
+  },
+  "Page": {
+    "Uri": "https://residuumservices.azurewebsites.net/"
+  },
+  "ConnectionStrings": {
+    "CacheContext": "Server=(localdb)\\mssqllocaldb;Database=CacheContext;Trusted_Connection=True;"
+  } 
 }
