--- a/Residuum.Services/appsettings.json
+++ b/Residuum.Services/appsettings.json
@@ -18,6 +18,6 @@
     "Uri": "https://residuumservices.azurewebsites.net/"
   },
   "ConnectionStrings": {
-    "MainConnection": "Server=local;Database=ResiduumServicesMainDatabase;Trusted_Connection=True;"
+    "CacheContext": "Server=(localdb)\\mssqllocaldb;Database=CacheContext;Trusted_Connection=True;"
   } 
 }
